[rd-editor] IJPL-185748 Refactor `UndoManagerImpl`
GitOrigin-RevId: e10de4d778b045475614cdfbc463bdc399c2d4ac